Add RAG API configuration and integrate knowledge base search tool
- Update .env.example to include RAG API endpoint and configuration options
- Import and integrate knowledgeBaseSearch tool in chat route
- Enhance message component to handle knowledge base search results
- Add display name mapping for knowledge base search tool in UI
- Refactor various components for improved styling and structure

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,11 @@ POSTGRES_URL=****
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 REDIS_URL=****
+
+# RAG API Configuration
+RAG_ENDPOINT_URL=https://flowapi-dexguru.dexguru.biz/api/rag_search_telegram_es_db
+RAG_DEFAULT_GROUP_ID=2493387211
+# Optional: Timeout in milliseconds (default: 30000)
+# RAG_TIMEOUT=30000
+# Optional: Maximum number of retries (default: 3)
+# RAG_MAX_RETRIES=3
