--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
-AUTH_SECRET=****
+AUTH_SECRET==****
 
 # The following keys below are automatically created and
 # added to your environment when you deploy on vercel
 
 # AI Gateway API Key (required for non-Vercel deployments)
 # For Vercel deployments, OIDC tokens are used automatically
-AI_GATEWAY_API_KEY=****
+AI_GATEWAY_API_KEY==****
 
 
 # Instructions to create a Vercel Blob Store here: https://vercel.com/docs/storage/vercel-blob
@@ -19,3 +19,8 @@ POSTGRES_URL=****
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 REDIS_URL=****
+
+# RAG Knowledge Base Configuration
+RAG_ENDPOINT_URL=https://flowapi-dexguru.dexguru.biz
+RAG_DEFAULT_GROUP_ID=2493387211
+RAG_REQUEST_TIMEOUT=10000
